[gd_scene load_steps=11 format=3 uid="uid://bghtednl47qn2"]

[ext_resource type="Script" uid="uid://cqhdcplaqrury" path="res://GameWorld.gd" id="1_o8k34"]
[ext_resource type="PackedScene" uid="uid://ckudr8chj1kgo" path="res://actors/player/player.tscn" id="2_vjhf7"]
[ext_resource type="PackedScene" uid="uid://0m2bg6htt36p" path="res://UI/PlayerHud.tscn" id="3_cbrnd"]
[ext_resource type="Script" uid="uid://be25ljohrxyxt" path="res://UI/Player_UI.gd" id="4_uu52o"]
[ext_resource type="Texture2D" uid="uid://bpbolnww5xfj" path="res://things/Items/Atlas/Popups/Hurry.tres" id="5_l0b32"]
[ext_resource type="PackedScene" uid="uid://drmm7cr2perqd" path="res://things/Teleporter/teleporter.tscn" id="6_axol4"]
[ext_resource type="PackedScene" uid="uid://dogcjld36l5xs" path="res://Levels/level_debug.tscn" id="7_vjhf7"]
[ext_resource type="PackedScene" uid="uid://b87als3d3rs7n" path="res://Levels/level_01.tscn" id="8_cbrnd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5c08"]
size = Vector2(16, 307)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0c47"]
size = Vector2(20, 308.5)

[node name="GameWorld" type="Node"]
script = ExtResource("1_o8k34")
playerScene = ExtResource("2_vjhf7")
playerHUDScene = ExtResource("3_cbrnd")
level_debug = ExtResource("7_vjhf7")
start_debug = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("4_uu52o")

[node name="Root" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Hurry!" type="TextureRect" parent="UI/Root"]
visible = false
layout_mode = 1
offset_right = 38.0
offset_bottom = 9.0
texture = ExtResource("5_l0b32")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TeleporterTop" parent="." node_paths=PackedStringArray("Destination") instance=ExtResource("6_axol4")]
position = Vector2(128, -8)
Destination = NodePath("../TeleporterBottom")

[node name="TeleporterBottom" parent="." node_paths=PackedStringArray("Destination") instance=ExtResource("6_axol4")]
position = Vector2(128, 224)
Destination = NodePath("../TeleporterTop")

[node name="TeleporterBottom2" parent="." node_paths=PackedStringArray("Destination") instance=ExtResource("6_axol4")]
position = Vector2(128, 252)
Destination = NodePath("../TeleporterTop")

[node name="NextLevelMarker" type="Marker2D" parent="."]
position = Vector2(0, 280)

[node name="TransitionSlots" type="Node" parent="."]

[node name="P1" type="Marker2D" parent="TransitionSlots"]
position = Vector2(48, 64)

[node name="P2" type="Marker2D" parent="TransitionSlots"]
position = Vector2(208, 64)

[node name="P3" type="Marker2D" parent="TransitionSlots"]
position = Vector2(48, 160)

[node name="P4" type="Marker2D" parent="TransitionSlots"]
position = Vector2(208, 160)

[node name="Wall_Left" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Left"]
position = Vector2(8, 99.5)
shape = SubResource("RectangleShape2D_n5c08")

[node name="Wall_Right" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Right"]
position = Vector2(246, 99.25)
shape = SubResource("RectangleShape2D_a0c47")

[node name="Level_01" parent="." instance=ExtResource("8_cbrnd")]
